2004-08-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* po/uk.po:
	  updated translation

2004-08-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* sys/ximage/ximagesink.c: (gst_ximagesink_xcontext_get):
	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_xcontext_get):
	  add debugging for display PAR calculation

2004-08-02  David Schleef  <ds@schleef.org>

	* configure.ac: Fix mikmod CFLAGS.

2004-07-27  Benjamin Otte  <otte@gnome.org>

	* gst/audioscale/gstaudioscale.c:
	- fix templates to only support S16, it's the only format that works
	- make caps nego code use try_set_caps_nonfixed and fixation instead
	of try_set_caps twice, which is not nice for autopluggers
	- change rank to secondary, so autopluggers can pick it up after
	audioconvert

2004-08-02  Iain <iain@prettypeople.org>

	* gst/interleave/interleave.c (interleave_init),
	(interleave_request_new_pad),
	(interleave_pad_removed),
	(interleave_buffered_loop): Use the real pad count, not the artificial
	one.

2004-08-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac: bump nano back to development

=== release 0.8.3 ===

2004-08-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac: releasing 0.8.3, "Water"

2004-08-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* sys/xvimage/xvimagesink.c:
	(gst_xvimagesink_calculate_pixel_aspect_ratio),
	(gst_xvimagesink_xcontext_clear), (gst_xvimagesink_sink_link),
	(gst_xvimagesink_change_state), (gst_xvimagesink_buffer_alloc),
	(gst_xvimagesink_set_property), (gst_xvimagesink_get_property),
	(gst_xvimagesink_init), (gst_xvimagesink_class_init):
	* sys/xvimage/xvimagesink.h:
	  apply similar PAR fixes as to ximagesink

2004-08-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	patch from: Benjamin Otte

	* ext/lame/gstlame.c: (gst_lame_src_link), (gst_lame_init):
	  add link function to lame.  Fixes #148986.

2004-08-02  Johan Dahlin  <johan@gnome.org>
