@@ -1,3 +1,11 @@
+2004-08-04  Jan Schmidt  <thaytan@mad.scientist.com>
+
+	* sys/ximage/ximagesink.c:
+	(gst_ximagesink_calculate_pixel_aspect_ratio):
+	* sys/xvimage/xvimagesink.c:
+	(gst_xvimagesink_calculate_pixel_aspect_ratio):
+	Make sure we calculate pixel-aspect-ratio using floating point maths
+
 2004-08-03  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* po/uk.po:
